@@ -439,6 +439,17 @@ templates/subSilver/overall_header.tpl
 
 #
 #-----[ FIND ]------------------------------------------
+#
+&lt;link rel="stylesheet" href="templates/subSilver/{T_HEAD_STYLESHEET}" type="text/css"&gt;
+
+#
+#-----[ AFTER, ADD ]------------------------------------------
+#
+{GALLERY2_CSS}
+{GALLERY2_JAVASCRIPT}
+
+#
+#-----[ FIND ]------------------------------------------
 # 
 &lt;img src="templates/subSilver/images/icon_mini_login.gif" width="12" height="13" border="0" alt="{L_LOGIN_LOGOUT}" hspace="3" /&gt;{L_LOGIN_LOGOUT}&lt;/a&gt;&amp;nbsp;
 
