@@ -29,7 +29,7 @@
 define('IN_PHPBB', true);
 $phpbb_root_path = './';
 include($phpbb_root_path . 'extension.inc');
-include($phpbb_root_path . 'common.'.$phpEx);
+include($phpbb_root_path . 'common.' . $phpEx);
 include($phpbb_root_path . 'g2helper.inc');
 
 //
@@ -41,52 +41,46 @@ init_userprefs($userdata);
 // End session management
 //
 
-
-$template->set_filenames(array( 'body' => 'gallery2.tpl'));
-
 $g2h = new g2helper($db);
 $g2h->init($userdata);
-
 
 GalleryCapabilities::set('showSidebarBlocks', true);
 $g2data = GalleryEmbed::handleRequest(); 
 
-if ($g2data['isDone']) { 
-	exit; // Gallery 2 has already sent output (redirect or binary data) 
-} 
+if ($g2data['isDone']) exit; 
+// Gallery 2 has already sent output (redirect or binary data) 
 
 //
 // Lets build a page ...
 //
 
-$page_title = "Gallery 2";
-include($phpbb_root_path . 'includes/page_header.'.$phpEx);
-
-// Use $g2data['headHtml'] and $g2data['bodyHtml'] 
-// to display Gallery 2 content inside embedding application 
-// if you don't want to use $g2data['headHtml'] directly, you can get the css, 
-// javascript and page title separately by calling... 
-if (isset($g2data['headHtml'])) { 
+if (isset($g2data['headHtml'])) {    
 	list($title, $css, $javascript) = GalleryEmbed::parseHead($g2data['headHtml']); 
 }
 
-foreach($css as $stylesheet) {
-	$links .= $stylesheet."\n";
+$page_title = $title;
+
+foreach ($css as $stylesheet) {
+   $links .= $stylesheet . "\n";
 }
 
-foreach($javascript as $js) {
-	$jlink .= $js."\n";
+foreach ($javascript as $js) {
+   $jlink .= $js . "\n";
 }
 
 $bodyHtml = $g2data['bodyHtml'];
 
+$template->set_filenames(array('body' => 'gallery2.tpl'));
+
 $template->assign_vars(array(
-	'BODY' => $bodyHtml,
-	'CSS' => $links,
-	'JAVASCRIPT' => $jlink));
+   'GALLERY2_BODY' => $bodyHtml,
+   'GALLERY2_CSS' => $links,
+   'GALLERY2_JAVASCRIPT' => $jlink));
+
+include($phpbb_root_path . 'includes/page_header.' . $phpEx);
 
 $template->pparse('body');
 
-include($phpbb_root_path . 'includes/page_tail.'.$phpEx);
+include($phpbb_root_path . 'includes/page_tail.' . $phpEx);
 
 ?>
